frontend/tests/cases/negative/intervals.gr
-- this shouldn't typecheck because the correct lb is 1

data Bool where True; False

foo : Int -> Int |2..2| -> Int
foo x |y| = if x > 5 then y else y+y
