frontend/tests/cases/negative/intervals.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/intervals.gr:6:13:
1..1 is not approximatable by 2..2 for type Interval Nat